--- a/.env-sample
+++ b/.env-sample
@@ -1,3 +1,6 @@
-PORT=3300
+PORT=
 DATABASE_STRING=mongodb://localhost:27017/sample_db
 JWT_SECRET=randomtokenizer
+ACCOUNT_URL=https://api.okra.ng/v2/mock-api/accounts-by-bvn
+CUSTOMER_URL=https://api.okra.ng/v2/mock-api/confirm-nuban
+IDENTITY_URL=https://api.okra.ng/v2/mock-api/confirm-bvn
